added quilting quote after submit button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
       <button>Submit</button>
     </div>
     <div>
+      <blockquote>
+        "Anyone who works on a quilt, who devotes her time, energy, creativity,
+        and passion to that art, learns to value the work of her hands. And as
+        any quilter will tell you, a quilter’s quilting friends are some of the
+        dearest, most generous, and most supportive people she knows."<br />-Jennifer
+        Chiaverini
+      </blockquote>
+    </div>
+    <div>
       <h4>Quilt Information</h4>
       <table>
         <thead>
